<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AMS Logbook</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="logbook">Logbook</string>
    <string name="report">Report</string>
    <string name="vehicles">Vehicles</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="select">SELECT</string>
    <string name="add">Add</string>
    <string-array name="select">
        <item>Select</item>
    </string-array>

    <string-array name="Drawer">
        <item>Door out</item>
        <item>Door in</item>
        <item>Scroll</item>
        <item>Slide</item>
    </string-array>

    <string-array name="Make">
        <item>Select Make</item>
        <item>Abarth</item>
        <item>Alfa</item>
        <item>Alpina</item>
        <item>Alpine</item>
        <item>Aston</item>
        <item>Audio</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Foton</item>
        <item>Genesis</item>
        <item>Great</item>
        <item>Haval</item>
        <item>Holden</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>INFINITI</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Land</item>
        <item>LDV</item>
        <item>Lexus</item>
        <item>Lotus</item>
        <item>Mahindra</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes_Benz</item>
        <item>MG</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>RAM</item>
        <item>Renault</item>
        <item>Rolls-Royce</item>
        <item>SKODA</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>


    </string-array>

    <string-array name="vehicle">
        <item>All vehicles</item>
        <item>Car</item>
        <item>Truck</item>
        <item>Bike</item>
    </string-array>

    <string-array name="Add_trip_vehicle">
        <item>Select</item>
        <item>Car</item>
        <item>Truck</item>
        <item>Bike</item>
    </string-array>

    <string-array name="ownership">
        <item>Business</item>
        <item>Private</item>
    </string-array>

    <string-array name="gear_type">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>

    <string-array name="bi_fuel">
        <item>2 tank</item>
        <item>1 tank</item>
    </string-array>

    <string-array name="consumption">
        <item>other</item>
    </string-array>

    <string-array name="vehicle_fuel">
        <item>AdBlue</item>
        <item>Autogas</item>
        <item>Diesel</item>
        <item>Electric</item>
        <item>Ethanol</item>
        <item>Gasoline</item>
    </string-array>

    <!--Headings   -->
    <string name="loading">Loading..</string>
    <string name="general_setting">General settings</string>
    <string name="drawer_style">Drawer style </string>
    <string name="version">1.0.0</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="distance">Distance(km)</string>
    <string name="expenses">Expenses($)</string>
    <string name="new_trip">New trip</string>
    <string name="trip_type">Trip type</string>
    <string name="vehical">Vehical</string>
    <string name="odometer_at_start">Odometer at start</string>
    <string name="odometer_at_end">Odometer at end</string>
    <string name="start_time">Starting time</string>
    <string name="end_time">End time</string>
    <string name="starting_address">Starting address</string>
    <string name="destination_address">Destination address</string>
    <string name="note">Note</string>
    <string name="title_activity_maps">Map</string>
    <string name="ownership">Ownership</string>
    <string name="register_number">Vehicle registration number</string>
    <string name="model_no">Model</string>
    <string name="gear_type">Gear type</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="model">Make</string>
    <string name="manufacturing_year">Manufacturing year</string>
    <string name="seating_capacity">Seating capacity</string>
    <string name="tank_fuel">Fuel</string>
    <string name="description">Description</string>
    <string name="odometer">Odometer</string>
    <string name="vehicle_saved_msg">Vehicle details saved successfully</string>
    <string name="update">Update</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="no_data_found">No data found</string>
    <string name="personal_distance">Personal</string>
    <string name="business_distance">Business</string>
    <string name="business_expense">Business</string>
    <string name="personal_expense">Personal</string>
    <string name="odometer_validation_msg">Odometer at end should not less than odometer at start</string>
    <string name="amount">Amount($)</string>
    <string name="fuel_filling_date">Date</string>
    <string name="location">Location</string>
    <string name="type_of_expense">Type of expense</string>
    <string name="comment">Comment</string>
    <string name="fuel_detail_saved">Fuel details saved successfully</string>
    <string name="other_expense">To add other expenses</string>
    <string name="click_here">Click here</string>
    <string name="click"><font color="#FF0000">Select Registration_No</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>


    <!--ohter expense  -->
    <string name="parking">Parking</string>
    <string name="oil">Oil</string>
    <string name="carwash">Car wash</string>
    <string name="Repairs_and_maintenance">Repairs and Maintenance</string>
    <string name="tires">Tires</string>
    <string name="toll">Toll</string>
    <string name="others">Others</string>
    <string name="provide_details">Please select appropriate option and provide expense </string>


    <!-- hint  -->
    <string name="enter_parking">Enter expense for parking</string>
    <string name="enter_oil">Enter expense for Oil</string>
    <string name="enter_car_wash">Enter expense for car wash</string>
    <string name="enter_repair">Enter expense for repairs and maintenance</string>
    <string name="enter_tires">Enter expense for tires</string>
    <string name="enter_toll">Enter expense for toll</string>
    <string name="enter_other">Enter other expense during trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="Logout">Logout</string>
    <string name="close">close</string>
    <string name="submit">Submit</string>
    <string name="message">Don\'t worry,resetting your password is easy, just tell us your email address and register with AmslogBook</string>
    <string name="maruti_800">Maruti 800</string>
    <string name="guest">Guest Login</string>
    <string name="menu">⋮</string>

    <string-array name="Graph">
        <item>Select</item>
        <item>Monthly expenses chart</item>
        <item>Expenses chart</item>

    </string-array>


</resources>
