<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:text="Forgot Your Password?"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"/>
    </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/message"
        android:layout_margin="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:hint="Email Address"
        android:textColor="@color/black"
        android:background="@drawable/custom_border"
        android:layout_margin="10dp"
        android:maxLines="4"
        android:textSize="@dimen/heading12"
        android:scrollHorizontally="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_border_forground"
            android:text="@string/submit"
            android:textColor="@drawable/button_border_forground_txtbtn" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:background="@drawable/navigation_close_btn"
            android:text="@string/cancel"
            android:textColor="@drawable/navigation_delet_txtbtn" />
    </LinearLayout>

       </LinearLayout>


</LinearLayout>